--- a/src/net/ayoentem/storagemanager/utils/fxml/stats.fxml
+++ b/src/net/ayoentem/storagemanager/utils/fxml/stats.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +13,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" fx:id="root" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.ayoentem.storagemanager.main.StatsController">
+<AnchorPane id="AnchorPane" fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.ayoentem.storagemanager.main.StatsController">
    <children>
       <SplitPane fx:id="splitPane" cache="true" cacheHint="QUALITY" depthTest="ENABLE" dividerPositions="0.5" focusTraversable="false" layoutX="10.0" layoutY="10.0" orientation="VERTICAL" prefHeight="801.0" prefWidth="878.0" style="-fx-padding: 0 0.75em 0 0.75em; -fx-border-color: azure;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <items>
@@ -20,11 +23,12 @@
                   <TextField fx:id="txtSearch" layoutX="14.0" layoutY="61.0" onKeyTyped="#trytoSearch" promptText="Filename" />
                   <Label fx:id="lblPath" layoutX="14.0" layoutY="22.0" prefHeight="17.0" prefWidth="460.0" text="Search for File in Path: " />
                   <Label fx:id="lblError" layoutX="172.0" layoutY="73.0" prefHeight="17.0" prefWidth="299.0" textFill="RED" />
-                  <CheckBox fx:id="rdiListFiles" layoutX="769.0" layoutY="14.0" mnemonicParsing="false" onAction="#listFiles" text="List Files" />
+                  <CheckBox fx:id="rdiListFiles" layoutX="778.0" layoutY="190.0" mnemonicParsing="false" onAction="#listFiles" text="List Files" />
                   <ProgressBar fx:id="progessbar" layoutX="492.0" layoutY="220.0" prefHeight="18.0" prefWidth="355.0" progress="0.0" />
                   <Button fx:id="btnOpen" layoutX="492.0" layoutY="298.0" mnemonicParsing="false" onAction="#openFile" prefHeight="37.0" prefWidth="355.0" text="Open" />
                   <Button fx:id="btnDelete" layoutX="491.0" layoutY="251.0" mnemonicParsing="false" onAction="#deleteFile" prefHeight="37.0" prefWidth="355.0" text="Delete" />
                   <Button fx:id="btnOpen1" layoutX="491.0" layoutY="344.0" mnemonicParsing="false" onAction="#openFile" prefHeight="37.0" prefWidth="355.0" text="Stats" />
+                  <Button fx:id="btnBack" layoutX="744.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="25.0" prefWidth="93.0" text="Back" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
